--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,7 +7,7 @@ header {
     -webkit-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
-    .Menu {
+    .MenuContainer {
         width: 90%;
         max-width: 1000px;
         margin: auto;
@@ -16,11 +16,11 @@ header {
         justify-content: space-between;
         align-items: center;
     }
-    .Logo {
+    .LogoContainer {
         display: inline-block;
         margin-right: 1em;
         color: white;
-        h1 {
+        .h1 {
             font-family: 'Tangerine', cursive;
             font-size: 60px;
             color: white;
