--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,13 +3,14 @@ header {
     background-color: #6A1B9A;
     width: 100vw;
     top: 0;
-    justify-content: space-evenly;
-    -webkit-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
-    box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
+    //justify-content: space-evenly;
+    -webkit-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.4);
+    -moz-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.4);
+    box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.4);
     .MenuContainer {
-        width: 90%;
-        max-width: 1000px;
+        width: 100vw;
+        max-width: fit-content;
+        height: 10vh;
         margin: auto;
         display: flex;
         flex-direction: row;
@@ -18,11 +19,12 @@ header {
     }
     .LogoContainer {
         display: inline-block;
-        margin-right: 1em;
+        margin-right: 25em;
         color: white;
         .h1 {
             font-family: 'Tangerine', cursive;
-            font-size: 60px;
+            font-size: 5rem;
+            font-weight: 700;
             color: white;
             text-decoration: none;
         }
