--- a/src/components/MedicalRecord/Medicalrecord.scss
+++ b/src/components/MedicalRecord/Medicalrecord.scss
@@ -1,3 +1,8 @@
+.ContainerContactsInformation {
+    height: 100vh;
+    width: 100vw;
+}
+
 // header {
 //     display: flex;
 //     background-color: #6A1B9A;
