--- a/src/components/CrisisRecord/CrisisRecord.scss
+++ b/src/components/CrisisRecord/CrisisRecord.scss
@@ -62,7 +62,6 @@ header {
             margin-top: 2%;
             margin-bottom: 2%;
             .PersonalInformationText {
-                margin-left: 7%;
                 color: #BFBDBD;
                 font-size: 2rem;
             }
@@ -82,7 +81,6 @@ header {
             display: flex;
             justify-content: left;
             flex-direction: column;
-            margin-left: 7%;
             .Form-control {
                 font-family: 'Roboto';
                 color: #B3B0B0;
@@ -101,7 +99,8 @@ header {
                     border: none;
                     border-bottom: 1px solid #673AB7;
                     border-radius: 3px;
-                    width: 80%;
+                    width: 100%;
+                    border-radius: 0;
                     margin-bottom: 2%;
                 }
             }
@@ -145,7 +144,6 @@ header {
                 .Title {
                     margin-top: 6%;
                     margin-bottom: 6%;
-                    padding-right: 13%;
                     .PersonalInformationText {
                         font-size: 1.1rem;
                     }
