--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,11 +1,11 @@
 header {
     background-color: #6A1B9A;
     width: 100vw;
-    height: 100px;
+    height: 20vh;
     top: 0;
-    -webkit-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
-    box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 7px 5px 0px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.5);
+    box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.5);
     .MenuContainer {
         width: 100%;
         margin: auto;
@@ -19,7 +19,7 @@ header {
             text-align: center;
             .h1 {
                 font-family: 'Tangerine', cursive;
-                font-size: 60px;
+                font-size: 5rem;
                 color: white;
                 text-decoration: none;
             }
@@ -49,7 +49,7 @@ header {
 
 @media(max-width:768px){
     header{
-        height: 180px;
+        height: 18vh;
         .MenuContainer{
             flex-direction: column;
             .LogoContainer{
