--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,11 +1,12 @@
 header {
     background-color: #6A1B9A;
     width: 100vw;
-    height: 20vh;
+    height: 15vh;
     top: 0;
     -webkit-box-shadow: 0px 7px 5px 0px rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.5);
     box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.5);
+    display: flex;
     .MenuContainer {
         width: 100%;
         margin: auto;
@@ -49,7 +50,7 @@ header {
 
 @media(max-width:768px){
     header{
-        height: 18vh;
+        height: 25vh;
         .MenuContainer{
             flex-direction: column;
             .LogoContainer{
