--- a/src/components/Recovery/Recovery.scss
+++ b/src/components/Recovery/Recovery.scss
@@ -84,7 +84,9 @@
                     border-bottom: 1px solid #673AB7;
                     border-radius: 3px;
                     width: 70%;
-                    margin-bottom: 6%;
+                    margin-bottom: 15px;
+                    border-radius:0px;
+                    height:30px;
                 }
             }
             .LinkPassword {
