--- a/src/components/Register/Register.scss
+++ b/src/components/Register/Register.scss
@@ -82,9 +82,10 @@
                 .InputRegister {
                     border: none;
                     border-bottom: 1px solid #673AB7;
-                    border-radius: 3px;
+                    border-radius: 0px;
                     width: 70%;
-                    margin-bottom: 6%;
+                    margin-bottom: 15px;
+                    height:30px;
                 }
             }
             .LinkPassword {
@@ -117,11 +118,14 @@
 @media(max-width:576px) {
     .MainContainerRegister {
         .ContainerRegister {
-            height: 85vh;
+            height: 100vh;
+            width:100vw;
             flex-direction: column;
+            border-radius:0px;
+            justify-content: space-between;
             .RegisterMain{
                 width: 100%;
-                height: 25%;
+                height: 15vh;
                 text-align: center;
                 .RegisterTitle {
                     font-size: 58px;
